small front-end fixes (#985)
* small front-end fixes
Change date format for recurrent event
change ribbon to not overlap the banner anymore && added box-shadow
start harmonizing colors by importing cd-commons > must be discussed, tint seems to make quite.. darkish colors
remove border-radius for share-event

* Refactor variables to use colors coming from common

* Enhance display of recurrent event
by only showing upcoming events

* center images for picture-grid

--- a/web/public/js/directives/cd-picture-grid/style.less
+++ b/web/public/js/directives/cd-picture-grid/style.less
@@ -15,6 +15,7 @@
       padding-top: 100%;
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: center;
     }
 
     &__caption {
